removed :active ability after square is visible. fixed some CSS. pseudocoding clickBlank

--- a/Module 1 Project - Minesweeper/styles/style.css
+++ b/Module 1 Project - Minesweeper/styles/style.css
@@ -103,7 +103,7 @@ p#minesweeper{
     /* border:1px solid blue; */
     width:100%;
     height:20%;
-    padding:2% 2% 1% 2%;
+    padding:2% 4% 1% 4%;
     display:flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -122,7 +122,7 @@ p#minesweeper{
     /* border:2px solid green; */
     width:100%;
     height:100%;
-    padding:2%;
+    padding:4%;
     display:grid;
     /* repeat 10 rows, 8 columns at 1fr */
     grid-template: repeat(10, 1fr) / repeat(8, 1fr);
@@ -135,7 +135,7 @@ button{
     padding:0;
 }
 
-.square:active{
+.active:active{
     background-color: rgb(160, 156, 156);
 }
 .square{
@@ -147,7 +147,7 @@ button{
     justify-content: center;
     position: relative;
     border-radius:3%;
-    box-shadow:inset 2px 1px 1px 1px rgb(221, 217, 217), inset 0px 0px 3px 1px black;
+    box-shadow:inset 1px 2px 3px 1px rgb(221, 217, 217), inset 0px 0px 2px 1px black;
     background-color: rgba(160, 156, 156, 0);
     margin:0;
     padding:0;
@@ -159,13 +159,17 @@ button{
     width:100%;
     height:100%;
     margin:0;
-
+    padding:0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .bombs {
     /* border:1px solid black; */
     width:100%;
-    height:100%;
+    height:85%;
     position: relative;
 }
 
@@ -209,7 +213,8 @@ button{
 }
 
 .blank{
-    background-color: rgb(121, 119, 119);
+    width:100%;
+    height:100%;
 }
 
 
